--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -11,13 +11,13 @@
   <li id="friendly">
     <%= @promo_texts[:friendly][:text] %>
     <p class="bottom-link">
-      <%= link_to @promo_texts[:friendly][:more], tutorial_path('getting-started') %>
+      <%= link_to @promo_texts[:friendly][:more], '/tutorials/getting-started' %>
     </p>
   </li>
   <li id="compact">
     <%= @promo_texts[:compact][:text] %>
     <p class="bottom-link">
-      <%= link_to @promo_texts[:compact][:more], builds_path %>
+      <%= link_to @promo_texts[:compact][:more], '/builds' %>
     </p>
   </li>
   <li id="fast">
