--- a/docs/com/ui/slider/demo/_scripts.html.erb
+++ b/docs/com/ui/slider/demo/_scripts.html.erb
@@ -1,8 +1,6 @@
-<% content_for :modules do %>
-  <%= javascript_include_tag '/builds/goods/right-dnd-min.js' %>
-  <%= javascript_include_tag '/builds/ui/right-slider-src.js' %>
-  <%= stylesheet_link_tag    'slider-demo'                    %>
-<% end %>
+<% content_for :modules, javascript_include_tag('/builds/goods/right-dnd-min.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-slider-src.js') %>
+<% content_for :modules, stylesheet_link_tag('slider-demo')                       %>
 <style type="text/css">
   input.slider-out {
     width: 5em;
@@ -31,5 +29,4 @@
     margin-left: .8em;
     float: left;
   }
-  
 </style>
