--- a/docs/com/ui/sortable/demo/_scripts.html.erb
+++ b/docs/com/ui/sortable/demo/_scripts.html.erb
@@ -1,8 +1,6 @@
-<% content_for :modules do %>
-  <%= javascript_include_tag "/builds/goods/right-dnd-min.js"   %>
-  <%= javascript_include_tag "/builds/ui/right-sortable-min.js" %>
-  <%= stylesheet_link_tag    'sortable-demo'                    %>
-<% end %>
+<% content_for :modules, javascript_include_tag("/builds/goods/right-dnd-min.js")   %>
+<% content_for :modules, javascript_include_tag("/builds/ui/right-sortable-min.js") %>
+<% content_for :modules, stylesheet_link_tag('sortable-demo')                       %>
 <style type="text/css">
   ul.sortable {
     width: 20em;
