Mentioned the KindaPlayer in the showcases

--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -43,6 +43,7 @@
       <li><a href="http://stcamp.net/games/sudoku/">Right Sudoku</a></li>
       <li><a href="http://stcamp.net/games/t-ninja/">Typing Ninja</a></li>
       <li><a href="http://stcamp.net/games/nippo/">Happy Nippo</a></li>
+      <li><a href="http://stcamp.net/examples/kinda_player/">Kinda Player</a></li>
     </ul>
   </dd>
 </dl>
