--- a/docs/com/download/_options.html.erb
+++ b/docs/com/download/_options.html.erb
@@ -17,4 +17,8 @@
     <li><%= link_to 'right-olds-src.js', '/builds/current/right-olds-src.js' %> - <%= "pages.download.old_browsers".t %></li>
     <li><%= link_to 'right-src.js.zip',  '/builds/current/right-src.js.zip' %> - <%= "pages.download.zipped_files".t %></li>
   </ul>
+  <dt><%= "pages.download.ServerSide".t %></dt>
+  <ul>
+    <li><%= link_to 'right-server.js',   '/builds/current/right-server.js' %></li>
+  </ul>
 </dl>
