Download page internationalization update

--- a/docs/com/download/_options.html.erb
+++ b/docs/com/download/_options.html.erb
@@ -1,9 +1,9 @@
 <dl id="download-options">
-  <dt><%= "pages.download.Normal".t %></dt>
+  <dt><%= "pages.download.Standard".t %></dt>
   <ul>
-    <li><%= link_to 'right.js.zip',  '/builds/current/right.js.zip' %> - <%= "pages.download.Packed".t %></li>
-    <li><%= link_to 'right-min.js.zip',  '/builds/current/right-min.js.zip' %> - <%= "pages.download.Minified".t %></li>
-    <li><%= link_to 'right-src.js.zip',  '/builds/current/right-src.js.zip' %> - <%= "pages.download.Uncompressed".t %></li>
+    <li><%= link_to 'right.js.zip',  '/builds/current/right.js.zip' %> - <%= 'pages.misc.packed_version'.t %></li>
+    <li><%= link_to 'right-min.js.zip',  '/builds/current/right-min.js.zip' %> - <%= 'pages.misc.minified_version'.t %></li>
+    <li><%= link_to 'right-src.js.zip',  '/builds/current/right-src.js.zip' %> - <%= 'pages.misc.source_version'.t %></li>
   </ul>
   <dt><%= "pages.download.ServerSide".t %></dt>
   <ul>
