Tooltips demo styleshit update

--- a/docs/com/ui/tooltips/demo/_scripts.html.erb
+++ b/docs/com/ui/tooltips/demo/_scripts.html.erb
@@ -9,12 +9,12 @@
   }
   
   #blue-tooltip div.right-tooltip-container {
-    border-left-color: blue;
+    color: #88F;
   }
   #green-tooltip div.right-tooltip-container {
-    border-left-color: green;
+    color: #8F8;
   }
   #red-tooltip div.right-tooltip-container {
-    border-left-color: red;
+    color: #F88;
   }
 </style>
