Right mines was added to the list of showcases

--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -40,6 +40,7 @@
   <dt><a href="#showcases"><h2>Showcases</h2><i><%= @hots_block[:showcases] %></i></a></dt>
   <dd>
     <ul>
+      <li><a href="http://stcamp.net/examples/r_mines/">Right Mines</a></li>
       <li><a href="http://stcamp.net/games/sudoku/">Right Sudoku</a></li>
       <li><a href="http://stcamp.net/games/t-ninja/">Typing Ninja</a></li>
       <li><a href="http://stcamp.net/games/nippo/">Happy Nippo</a></li>
