--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -45,6 +45,7 @@
       <li><a href="http://stcamp.net/games/t-ninja/">Typing Ninja</a></li>
       <li><a href="http://stcamp.net/games/nippo/">Happy Nippo</a></li>
       <li><a href="http://stcamp.net/examples/kinda_player/">Kinda Player</a></li>
+      <li><a href="http://github.com/rightjs/rightjs-patterns">RightJS Patterns</a></li>
     </ul>
   </dd>
 </dl>
