The What's new in RJS2 page

--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -1,4 +1,13 @@
 <dl id="tutorials-index">
+  <dt>RightJS 2 Topics</dt>
+  <ul>
+    <%= menu_link_to "What's New in RightJS 2",          tutorial_path('what-new-in-rjs2') %>
+    <%= menu_link_to "What's New in RightJS UI 2",       tutorial_path('what-new-in-rui2') %>
+    <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
+    <%= menu_link_to "DOM-Wrappers in RightJS 2",        tutorial_path('dom-wrappers') %>
+    <%= menu_link_to "Safe-mode and Normal-mode",        tutorial_path('safe-mode') %>
+  </ul>
+  
   <dt>General Features</dt>
   <ul>
     <%= menu_link_to "Getting Started",                  tutorial_path('getting-started') %>
