--- a/docs/com/tutorials/_index_ru.html.erb
+++ b/docs/com/tutorials/_index_ru.html.erb
@@ -1,4 +1,13 @@
 <dl id="tutorials-index">
+  <dt>RightJS 2 Вопросы</dt>
+  <ul>
+    <%= menu_link_to "Что нового в RightJS 2",           tutorial_path('what-new-in-rjs2') %>
+    <%= menu_link_to "Что нового в RightJS UI 2",        tutorial_path('what-new-in-rui2') %>
+    <%= menu_link_to "DOM-Обертки в RightJS 2",          tutorial_path('dom-wrappers') %>
+    <%= menu_link_to "RightJS 2 пособие для миграции",   tutorial_path('rjs2-migration') %>
+    <%= menu_link_to "Безопасный режим и иже с ним",     tutorial_path('safe-mode') %>
+  </ul>
+  
   <dt>Общие вопросы</dt>
   <ul>
     <%= menu_link_to "Быстрый старт",                    tutorial_path('getting-started') %>
