--- a/docs/com/fx-demo/_demos.html.erb
+++ b/docs/com/fx-demo/_demos.html.erb
@@ -131,8 +131,8 @@ $('scroll-test').scroll({
 <p>&nbsp;</p>
 
 
-<h1>RightJS Goods Additional Visual Effects</h1>
-<script type="text/javascript" src="/builds/goods/right-effects.js"></script>
+<h1>RightJS Plugins Additional Visual Effects</h1>
+<script type="text/javascript" src="/builds/plugins/right-effects.js"></script>
 
 
 <h2>Fx.CSS</h2>
