--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -34,8 +34,8 @@
   <dt><a href="#ui"><h2>RightJS UI</h2><i><%= @hots_block[:ui] %></i></a></dt>
   <dd id="ui"><%= ui_modules_menu %></dd>
   
-  <dt><a href="#goods"><h2>RightJS Goods</h2><i><%= @hots_block[:goods] %></i></a></dt>
-  <dd id="goods"><%= goods_modules_menu %></dd>
+  <dt><a href="#plugins"><h2>RightJS Plugins</h2><i><%= @hots_block[:plugins] %></i></a></dt>
+  <dd id="plugins"><%= plugins_modules_menu %></dd>
   
   <dt><a href="#showcases"><h2>Showcases</h2><i><%= @hots_block[:showcases] %></i></a></dt>
   <dd>
