--- a/docs/com/ui/slider/demo/_scripts.html.erb
+++ b/docs/com/ui/slider/demo/_scripts.html.erb
@@ -1,6 +1,5 @@
-<% content_for :modules, javascript_include_tag('/builds/goods/right-dnd-min.js') %>
-<% content_for :modules, javascript_include_tag('/builds/ui/right-slider-src.js') %>
-<% content_for :modules, stylesheet_link_tag('slider-demo')                       %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-slider.js') %>
+<% content_for :modules, stylesheet_link_tag('slider-demo')                   %>
 <style type="text/css">
   input.slider-out {
     width: 5em;
