--- a/docs/com/plugins/_download.html.erb
+++ b/docs/com/plugins/_download.html.erb
@@ -1,8 +1,8 @@
 ## <%= 'pages.misc.Download'.t %>, :download
 
-* [right-<%= name %>.js](/builds/goods/right-<%= name %>.js) - <%= 'pages.misc.packed_version'.t %>
-* [right-<%= name %>-min.js](/builds/goods/right-<%= name %>-min.js) - <%= 'pages.misc.minified_version'.t %>
-* [right-<%= name %>-src.js](/builds/goods/right-<%= name %>-src.js) - <%= 'pages.misc.source_version'.t %>
+* [right-<%= name %>.js](/builds/plugins/right-<%= name %>.js) - <%= 'pages.misc.packed_version'.t %>
+* [right-<%= name %>-min.js](/builds/plugins/right-<%= name %>-min.js) - <%= 'pages.misc.minified_version'.t %>
+* [right-<%= name %>-src.js](/builds/plugins/right-<%= name %>-src.js) - <%= 'pages.misc.source_version'.t %>
 
 <% if @language == 'ru' %>
 Вы так же можете встроить данный плагин в ядро на [странице пользовательских сборок](<%= builds_path %>).
