Updating all the plugins and UI documentation

--- a/docs/com/plugins/drag-and-drop/demo/_constrained.html.erb
+++ b/docs/com/plugins/drag-and-drop/demo/_constrained.html.erb
@@ -1,7 +1,7 @@
 <p>
   <div class="test-container">
-    <div class="draggable" rel="draggable" data-draggable-options="{axis: 'x', revert: true}">X-Axis Only</div>
-    <div class="draggable" rel="draggable" data-draggable-options="{axis: 'y', revert: true}">Y-Axis Only</div>
+    <div class="draggable" rel="draggable" data-draggable="{axis: 'x', revert: true}">X-Axis Only</div>
+    <div class="draggable" rel="draggable" data-draggable="{axis: 'y', revert: true}">Y-Axis Only</div>
   </div>
 </p>
 <p>
@@ -12,7 +12,7 @@
 </p>
 <p>
   <div class="test-container" id="draggable-area">
-    <div class="draggable" rel="draggable" data-draggable-options="{range: 'draggable-area'}">I Live In Here</div>
+    <div class="draggable" rel="draggable" data-draggable="{range: 'draggable-area'}">I Live In Here</div>
   </div>
 </p>
 <script type="text/javascript">
