--- a/docs/com/plugins/drag-and-drop/demo/_droppable.html.erb
+++ b/docs/com/plugins/drag-and-drop/demo/_droppable.html.erb
@@ -1,6 +1,6 @@
 <p>
   <div class="test-container">
-    <div class="draggable" rel="draggable" data-draggable-options="{revert: true}">Drag Me</div>
+    <div class="draggable" rel="draggable" data-draggable="{revert: true}">Drag Me</div>
     <div class="droppable" rel="droppable">Drop Here</div>
   </div>
 </p>
