--- a/docs/com/plugins/drag-and-drop/demo/_simple.html.erb
+++ b/docs/com/plugins/drag-and-drop/demo/_simple.html.erb
@@ -3,19 +3,19 @@
 
 <p>
   <div class="test-container">
-    <div class="draggable" rel="draggable" data-draggable-options="{}">Drag Me</div>
-    <div class="draggable" rel="draggable" data-draggable-options="{}">Or Me</div>
+    <div class="draggable" rel="draggable" data-draggable="{}">Drag Me</div>
+    <div class="draggable" rel="draggable" data-draggable="{}">Or Me</div>
   </div>
 </p>
 <p>
   <div class="test-container">
-    <div class="draggable" rel="draggable" data-draggable-options="{revert: true}">I Run Back</div>
-    <div class="draggable" rel="draggable" data-draggable-options="{clone: true, revert: true}">I Leave Clone</div>
+    <div class="draggable" rel="draggable" data-draggable="{revert: true}">I Run Back</div>
+    <div class="draggable" rel="draggable" data-draggable="{clone: true, revert: true}">I Leave Clone</div>
   </div>
 </p>
 <p>
   <div class="test-container">
-    <div class="draggable" rel="draggable" data-draggable-options="{snap: 50}">I Snap To 50px</div>
-    <div class="draggable" rel="draggable" data-draggable-options="{snap: [0, 50]}">I Snap To [0, 50]</div>
+    <div class="draggable" rel="draggable" data-draggable="{snap: 50}">I Snap To 50px</div>
+    <div class="draggable" rel="draggable" data-draggable="{snap: [0, 50]}">I Snap To [0, 50]</div>
   </div>
 </p>
