--- a/docs/com/ui/colorpicker/demo/_scripts.html.erb
+++ b/docs/com/ui/colorpicker/demo/_scripts.html.erb
@@ -1,4 +1,4 @@
-<% content_for :modules, javascript_include_tag('/builds/ui/right-colorpicker-min.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-colorpicker.js') %>
 <style type="text/css">
   #inline-test-2-out {
     display: inline-block;
@@ -13,7 +13,7 @@
     vertical-align: top;
     margin-left: 1em;
   }
-  div.right-colorpicker {
+  div.rui-colorpicker {
     background: #E8E6E0;
   }
 </style>
