--- a/docs/com/ui/resizable/demo/_scripts.html.erb
+++ b/docs/com/ui/resizable/demo/_scripts.html.erb
@@ -1,14 +1,14 @@
-<% content_for :modules, javascript_include_tag('/builds/ui/right-resizable-min.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/rui-resizable.js') %>
 
 <style type="text/css">
-  .right-resizable,
-  .right-resizable-top,
-  .right-resizable-left,
-  .right-resizable-right,
-  .right-resizable-bottom {
+  .rui-resizable,
+  .rui-resizable-top,
+  .rui-resizable-left,
+  .rui-resizable-right,
+  .rui-resizable-bottom {
     border-color: #CFCEBD;
   }
-  .right-resizable-handle {
+  .rui-resizable-handle {
     background-color: #CFCEBD;
   }
   div.resizable-test-block {
