--- a/docs/com/ui/slider/demo/_snapping.html.erb
+++ b/docs/com/ui/slider/demo/_snapping.html.erb
@@ -1,21 +1,21 @@
 <p>
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-3',snap:10}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-3',snap:10}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-3" />
   </div>
 
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-4',snap:20}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-4',snap:20}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-4" />
   </div>
 
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-5',snap:30}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-5',snap:30}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-5" />
   </div>
