--- a/docs/com/ui/tabs/demo/_carousel.html.erb
+++ b/docs/com/ui/tabs/demo/_carousel.html.erb
@@ -3,7 +3,7 @@
     <input type="checkbox" id="slideshow-swapper" checked="false" />
     Slideshow
   </label>
-  <ul id="carousel-tabs" class="right-tabs-carousel">
+  <ul id="carousel-tabs" class="rui-tabs-carousel">
     <ul>
       <li><a href="#tab-1"><%= image_tag 'test/1-min.jpg' %></a></li>
       <li><a href="#tab-2"><%= image_tag 'test/2-min.jpg' %></a></li>
