--- a/docs/com/ui/tabs/demo/_simple.html.erb
+++ b/docs/com/ui/tabs/demo/_simple.html.erb
@@ -1,4 +1,4 @@
-<% content_for :modules, javascript_include_tag('/builds/ui/right-tabs-min.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-tabs.js') %>
 
 <style type="text/css">
   .right-tabs .right-tabs-panel {
