--- a/docs/com/plugins/_download.html.erb
+++ b/docs/com/plugins/_download.html.erb
@@ -1,7 +1,6 @@
 ## <%= 'pages.misc.Download'.t %>, :download
 
-* [right-<%= name %>.js](/builds/plugins/right-<%= name %>.js) - <%= 'pages.misc.packed_version'.t %>
-* [right-<%= name %>-min.js](/builds/plugins/right-<%= name %>-min.js) - <%= 'pages.misc.minified_version'.t %>
+* [right-<%= name %>.js](/builds/plugins/right-<%= name %>.js) - <%= 'pages.misc.minified_version'.t %>
 * [right-<%= name %>-src.js](/builds/plugins/right-<%= name %>-src.js) - <%= 'pages.misc.source_version'.t %>
 
 <% if @language == 'ru' %>
