--- a/docs/com/ui/_head.html.erb
+++ b/docs/com/ui/_head.html.erb
@@ -1,7 +1,6 @@
 <%= 'pages.misc.get_the_latest'.t %>
 
-* [right-<%= name %>.js](/builds/ui/right-<%= name %>.js) - <%= 'pages.misc.packed_version'.t %>
-* [right-<%= name %>-min.js](/builds/ui/right-<%= name %>-min.js) - <%= 'pages.misc.minified_version'.t %>
+* [right-<%= name %>.js](/builds/ui/right-<%= name %>.js) - <%= 'pages.misc.minified_version'.t %>
 * [right-<%= name %>-src.js](/builds/ui/right-<%= name %>-src.js) - <%= 'pages.misc.source_version'.t %>
 
 <%= 'pages.misc.github_available'.t %>
