--- a/docs/com/ui/_unit.html.erb
+++ b/docs/com/ui/_unit.html.erb
@@ -8,7 +8,6 @@
     <%= link_to "pages.misc.Demo".t,          unit[:url] + '/demo' %> |
 
   <%= "pages.misc.Download".t %>:
-    <%= link_to "pages.misc.build".t,    "/builds/ui/right-#{unit[:key]}.js",     :target => :_blank %>,
-    <%= link_to "pages.misc.minified".t, "/builds/ui/right-#{unit[:key]}-min.js", :target => :_blank %>,
+    <%= link_to "pages.misc.minified".t, "/builds/ui/right-#{unit[:key]}.js",     :target => :_blank %>,
     <%= link_to "pages.misc.source".t,   "/builds/ui/right-#{unit[:key]}-src.js", :target => :_blank %>
 </p>
