--- a/docs/com/ui/colorpicker/demo/_auto.html.erb
+++ b/docs/com/ui/colorpicker/demo/_auto.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <input type="text" name="val3" rel="colorpicker" data-colorpicker-options="{fxDuration: 'short'}" />
+  <input type="text" name="val3" rel="colorpicker" data-colorpicker="{fxDuration: 'short'}" />
   <input type="text" name="val4" id="colorpicker-field" />
-  <a href="#" rel="colorpicker[colorpicker-field]" data-colorpicker-options="{format:'rgb'}">set</a>
+  <a href="#" data-colorpicker="{format:'rgb', update:'colorpicker-field'}">set</a>
 </p>
