--- a/docs/com/ui/slider/demo/_precise.html.erb
+++ b/docs/com/ui/slider/demo/_precise.html.erb
@@ -1,25 +1,25 @@
 <p>
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-9',round: 1}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-9',round: 1}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-9" />
   </div>
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-10',round: 2}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-10',round: 2}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-10" />
   </div>
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-11',round: 3}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-11',round: 3}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-11" />
   </div>
   <div class="slider-demo">
-    <div class="right-slider" data-slider-options="{update:'slider-out-12',round: 4}">
-      <div class="right-slider-handle"></div>
+    <div class="rui-slider" data-slider="{update:'slider-out-12',round: 4}">
+      <div class="level"></div><div class="handle"></div>
     </div>
     <input type="text" class="slider-out" id="slider-out-12" />
   </div>
