--- a/docs/com/ui/uploader/demo/_form.html.erb
+++ b/docs/com/ui/uploader/demo/_form.html.erb
@@ -1,10 +1,10 @@
-<% content_for :modules, javascript_include_tag('/builds/ui/right-uploader-min.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-uploader.js') %>
 
 <style type="text/css">
-  div.right-progress-bar {
+  div.rui-progress-bar {
     border-color: #AAA;
   }
-  div.right-progress-bar div.bar {
+  div.rui-progress-bar div.bar {
     background: #C8C6C0;
   }
 </style>
@@ -15,7 +15,7 @@
     <input type="button" value="Send" disabled="true" />
   </p>
 
-  <div class="right-progress-bar" id="demo-progress-bar">
+  <div class="rui-progress-bar" id="demo-progress-bar">
     <div class="bar"></div>
     <div class="num">0%</div>
   </div>
