--- a/docs/com/fx-demo/_demos.html.erb
+++ b/docs/com/fx-demo/_demos.html.erb
@@ -3,11 +3,11 @@
 <script type="text/javascript">
 // <![CDATA[
 function reset(id) {
-  $(id).replace('<div id="'+id+'" class="'+$(id).className+'">'+$(id).innerHTML+'</div>');
+  $(id).replace('<div id="'+id+'" class="'+$(id)._.className+'">'+$(id).html()+'</div>');
 }
 function runfx(id) {
   try {
-    $eval($(id+'-script').value);
+    $eval($(id+'-script').value());
   } catch(e) {}
 }
 // ]]>
@@ -66,7 +66,7 @@ $('highlight-test')
   </div>
 
 <textarea id="fade-test-script">
-$('fade-test').fade();
+$('fade-test').fade().fade();
 </textarea>
 
   <div class="fx-links">
@@ -129,128 +129,5 @@ $('scroll-test').scroll({
 </script>
 
 <p>&nbsp;</p>
-
-
-<h1>RightJS Plugins Additional Visual Effects</h1>
-<script type="text/javascript" src="/builds/plugins/right-effects.js"></script>
-
-
-<h2>Fx.CSS</h2>
-
-<div class="fx-example">
-  <div class="fx-test-container">
-    <div id="css-test" class="fx-test">I can morph to classes!</div>
-  </div>
-
-<textarea id="css-test-script">
-$('css-test')
-  .morphToClass('green-background')
-  .morphToClass('blue-color')
-</textarea>
-
-  <div class="fx-links">
-    <a href="" onclick="runfx('css-test'); return false;">Start</a>
-    <a href="" onclick="reset('css-test'); $('css-test').setClass('fx-test'); return false;">Reset</a>
-  </div>
-</div>
-
-
-<h2>Fx.Move</h2>
-
-<div class="fx-example">
-  <div class="fx-test-container">
-    <div id="move-test" class="fx-test">I can be moved around!</div>
-  </div>
-
-<textarea id="move-test-script">
-$('move-test')
-  .move({x:  300}, {position: 'relative'})
-  .move({y: -200}, {position: 'relative'})
-  .move({x: -300}, {position: 'relative'})
-  .move({y:  200}, {position: 'relative'});
-</textarea>
-
-  <div class="fx-link">
-    <a href="" onclick="runfx('move-test'); return false;">Start</a>
-    <a href="" onclick="reset('move-test'); return false;">Reset</a>
-  </div>
-</div>
-
-
-<h2>Fx.Run</h2>
-
-<div class="fx-example">
-  <div class="fx-test-container">
-    <div id="run-test" class="fx-test">I can run in and out!</div>
-  </div>
-
-<textarea id="run-test-script">
-$('run-test')
-  .run().run() // left by default
-  .run('out', {direction: 'top'})
-  .run('in',  {direction: 'top'})
-</textarea>
-
-  <div class="fx-links">
-    <a href="" onclick="runfx('run-test'); return false;">Start</a>
-    <a href="" onclick="reset('run-test'); return false;">Reset</a>
-  </div>
-</div>
-
-
-<h2>Fx.Bounce</h2>
-
-<div class="fx-example">
-  <div class="fx-test-container">
-    <div id="bounce-test" class="fx-test">I can bounce!</div>
-  </div>
-
-<textarea id="bounce-test-script">
-$('bounce-test').bounce();
-</textarea>
-
-  <div class="fx-links">
-    <a href="" onclick="runfx('bounce-test'); return false;">Start</a>
-    <a href="" onclick="reset('bounce-test'); return false;">Reset</a>
-  </div>
-</div>
-
-
-<h2>Fx.Puff</h2>
-
-<div class="fx-example">
-  <div class="fx-test-container">
-    <div id="puff-test" class="fx-test">I can puff out and in!</div>
-  </div>
-
-<textarea id="puff-test-script">
-$('puff-test').puff()
-</textarea>
-
-  <div class="fx-links">
-    <a href="" onclick="runfx('puff-test'); return false;">Start</a>
-    <a href="" onclick="reset('puff-test'); return false;">Reset</a>
-  </div>
-</div>
-
-
-<h2>Fx.Zoom</h2>
-
-<div class="fx-example fx-example-big">
-  <div class="fx-test-container">
-    <div id="zoom-test" class="fx-test">Zoom!</div>
-  </div>
-
-<textarea id="zoom-test-script">
-$('zoom-test')
-  .zoom(2,   {from: 'left-top', duration: 'long'})
-  .zoom(0.5, {from: 'left-top', duration: 'long'});
-</textarea>
-
-  <div class="fx-links">
-    <a href="" onclick="runfx('zoom-test'); return false;">Start</a>
-    <a href="" onclick="reset('zoom-test'); return false;">Reset</a>
-  </div>
-</div>
 
 
