--- a/docs/com/ui/slider/demo/_scripts.html.erb
+++ b/docs/com/ui/slider/demo/_scripts.html.erb
@@ -23,7 +23,7 @@
     vertical-align: top;
     width: 2em;
   }
-  div.slider-demo-vertical div.right-slider {
+  div.slider-demo-vertical div.rui-slider {
     margin-top: .2em;
     margin-left: .8em;
     float: left;
