--- a/docs/com/ui/slider/demo/_simple.html.erb
+++ b/docs/com/ui/slider/demo/_simple.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="slider-demo-vertical">
     <input type="text" class="slider-out" id="slider-out-2" />
-    <div class="rui-slider right-slider-vertical" data-slider="{update: 'slider-out-2'}">
+    <div class="rui-slider rui-slider-vertical" data-slider="{update: 'slider-out-2'}">
       <div class="level"></div><div class="handle"></div>
     </div>
   </div>
