--- a/docs/com/ui/tooltips/demo/_scripts.html.erb
+++ b/docs/com/ui/tooltips/demo/_scripts.html.erb
@@ -1,4 +1,4 @@
-<% content_for :modules, javascript_include_tag('/builds/ui/right-tooltips.js') %>
+<% content_for :modules, javascript_include_tag('/builds/ui/right-tooltip.js') %>
 <style type="text/css">
   ul.tooltiped li {
     margin: .5em 0;
@@ -8,13 +8,13 @@
     background-color: #EEE;
   }
 
-  #blue-tooltip div.right-tooltip-container {
+  #blue-tooltip div.rui-tooltip-container {
     color: #88F;
   }
-  #green-tooltip div.right-tooltip-container {
+  #green-tooltip div.rui-tooltip-container {
     color: #8F8;
   }
-  #red-tooltip div.right-tooltip-container {
+  #red-tooltip div.rui-tooltip-container {
     color: #F88;
   }
 </style>
