--- a/docs/com/ui/sortable/demo/_scripts.html.erb
+++ b/docs/com/ui/sortable/demo/_scripts.html.erb
@@ -5,6 +5,11 @@
     width: 20em;
     list-style: none;
     padding: 0;
+    display: inline-block;
+   *display: inline;
+   *zoom: 1;
+    margin-right: 1em;
+    vertical-align: top;
   }
   ul.sortable li {
     cursor: move;
