Download and build pages update

--- a/docs/com/download/_options.html.erb
+++ b/docs/com/download/_options.html.erb
@@ -1,9 +1,9 @@
 <dl id="download-options">
   <dt><%= "pages.download.Standard".t %></dt>
   <ul>
-    <li><%= link_to 'right.js.zip',  '/builds/current/right.js.zip' %> - <%= 'pages.misc.packed_version'.t %></li>
-    <li><%= link_to 'right-min.js.zip',  '/builds/current/right-min.js.zip' %> - <%= 'pages.misc.minified_version'.t %></li>
+    <li><%= link_to 'right.js.zip',      '/builds/current/right.js.zip' %> - <%= 'pages.misc.minified_version'.t %></li>
     <li><%= link_to 'right-src.js.zip',  '/builds/current/right-src.js.zip' %> - <%= 'pages.misc.source_version'.t %></li>
+    <li><%= link_to 'right-safe.js.zip', '/builds/current/right-safe.js.zip' %> - <%= 'pages.misc.safe_mode_version'.t %></li>
   </ul>
   <dt><%= "pages.download.ServerSide".t %></dt>
   <ul>
