--- a/docs/com/builds/_form.html.erb
+++ b/docs/com/builds/_form.html.erb
@@ -5,24 +5,17 @@
   <p>
     <ul>
       <%= [
-        ['cookie',   'pages.builds.modules.cookie'.t        ],
-        ['form',     'pages.builds.modules.form'.t          ],
-        ['xhr',      'pages.builds.modules.xhr'.t           ],
-        ['fx',       'pages.builds.modules.fx'.t            ],
-        ['olds',     'pages.builds.modules.olds'.t          ],
+        ['cookie',   'pages.builds.modules.cookie'.t     ],
+        ['form',     'pages.builds.modules.form'.t       ],
+        ['xhr',      'pages.builds.modules.xhr'.t        ],
+        ['fx',       'pages.builds.modules.fx'.t         ],
+        ['events',   'pages.builds.modules.events'.t     ],
+        ['minify',   'pages.builds.modules.minify'.t     ],
 
-        # RightJS Plugins modules
-        ['json',     'pages.builds.modules.json'.t,     true],
-        ['events',   'pages.builds.modules.events'.t,   true],
-        ['effects',  'pages.builds.modules.effects'.t,  true],
-        ['behavior', 'pages.builds.modules.behavior'.t, true],
-        ['dnd',      'pages.builds.modules.dnd'.t,      true],
-        ['rails',    'pages.builds.modules.rails'.t,    true],
-
-        ['compress', 'pages.builds.modules.compress'.t      ],
-        ['build',    'pages.builds.modules.build'.t         ]
+        ['olds',     'pages.builds.modules.olds'.t, true ],
+        ['safe',     'pages.builds.modules.safe'.t, true ]
       ].collect do |options|
-        "<li#{options[2] ? ' class="plugins"' : ''}>"+
+        "<li>"+
             check_box_tag("options[#{options.first}]", 1, !options[2] && options[0] != 'olds') +
             label_tag("options_#{options.first}", options[1])+
         "</li>"
