--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -11,7 +11,7 @@
   <dt>General Features</dt>
   <ul>
     <%= menu_link_to "Getting Started",                  tutorial_path('getting-started') %>
-    <%= menu_link_to "Top 10 Features",                  tutorial_path('top-10-features') %>
+    <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
     <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
     <%= menu_link_to "Assignments And Chains",           tutorial_path('assignments-and-chains') %>
     <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
