Revamped documentation index (English only).

--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -1,38 +1,52 @@
 <dl id="tutorials-index">
-  <dt>RightJS 2 Topics</dt>
-  <ul>
-    <%= menu_link_to "What's New in RightJS 2",          tutorial_path('what-new-in-rjs2') %>
-    <%= menu_link_to "What's New in RightJS UI 2",       tutorial_path('what-new-in-rui2') %>
-    <%= menu_link_to "DOM-Wrappers in RightJS 2",        tutorial_path('dom-wrappers') %>
-    <%= menu_link_to "Safe Mode and Normal Mode",        tutorial_path('safe-mode') %>
-    <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
-  </ul>
-
-  <dt>General Features</dt>
+  <dt>Beginner Topics</dt>
   <ul>
     <%= menu_link_to "Getting Started",                  tutorial_path('getting-started') %>
-    <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
-    <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
-    <%= menu_link_to "Assignments And Chains",           tutorial_path('assignments-and-chains') %>
-    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
-    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
     <%= menu_link_to "RightJS Extending Guide",          tutorial_path('rightjs-extending') %>
-    <%= menu_link_to "Uniformed Options Handling",       tutorial_path('uniformed-options-handling') %>
-    <%= menu_link_to "Uniformed Events Handling",        tutorial_path('uniformed-events-handling') %>
-    <%= menu_link_to "Object Oriented Programming",      tutorial_path('object-oriented-programming') %>
-    <%= menu_link_to "Functional Programming",           tutorial_path('functional-programming') %>
+    <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
   </ul>
-  <dt>DOM Features</dt>
-  <ul>
-    <%= menu_link_to "DOM Navigation And Manipulations", tutorial_path('dom-navigation-and-manipulations') %>
-    <%= menu_link_to "DOM Events Handling",              tutorial_path('dom-events-handling') %>
-    <%= menu_link_to "Elements Visual State Toggling",   tutorial_path('elements-toggling') %>
-    <%= menu_link_to "Unobtrusive Programming And Events Delegation", tutorial_path('events-delegation') %>
-  </ul>
-  <dt>Additional Features</dt>
+
+  <dt>Ajax</dt>
   <ul>
     <%= menu_link_to "Ajax Basics",                      tutorial_path('ajax-handling') %>
     <%= menu_link_to "Ajax Forms",                       tutorial_path('ajax-forms') %>
+  </ul>
+
+  <dt>DOM</dt>
+  <ul>
+    <%= menu_link_to "DOM Navigation And Manipulations", tutorial_path('dom-navigation-and-manipulations') %>
+    <%= menu_link_to "DOM Events Handling",              tutorial_path('dom-events-handling') %>
+    <%= menu_link_to "DOM-Wrappers in RightJS 2",        tutorial_path('dom-wrappers') %>
+    <%= menu_link_to "Elements Visual State Toggling",   tutorial_path('elements-toggling') %>
+    <%= menu_link_to "Unobtrusive Programming And Events Delegation", tutorial_path('events-delegation') %>
+  </ul>
+
+  <dt>Programming Paradigms</dt>
+  <ul>
+    <%= menu_link_to "Object Oriented Programming",      tutorial_path('object-oriented-programming') %>
+    <%= menu_link_to "Functional Programming",           tutorial_path('functional-programming') %>
+  </ul>
+  
+  <dt>RightJS 2 Topics</dt>
+  <ul>
+    <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
+    <%= menu_link_to "What's New in RightJS 2",          tutorial_path('what-new-in-rjs2') %>
+    <%= menu_link_to "What's New in RightJS UI 2",       tutorial_path('what-new-in-rui2') %>
+  </ul>
+
+  <dt>Syntactical Sugar</dt>
+  <ul>
+    <%= menu_link_to "Assignments And Chains",           tutorial_path('assignments-and-chains') %>
+    <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
+    <%= menu_link_to "Uniformed Events Handling",        tutorial_path('uniformed-events-handling') %>
+    <%= menu_link_to "Uniformed Options Handling",       tutorial_path('uniformed-options-handling') %>
+    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
+  </ul>
+
+  <dt>Additional Features</dt>
+  <ul>
+    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
+    <%= menu_link_to "Safe Mode and Normal Mode",        tutorial_path('safe-mode') %>
     <%= menu_link_to "Visual Effects",                   tutorial_path('visual-effects') %>
   </ul>
 </dl>
