--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -2,8 +2,16 @@
   <dt>Beginner Topics</dt>
   <ul>
     <%= menu_link_to "Getting Started",                  tutorial_path('getting-started') %>
-    <%= menu_link_to "RightJS Extending Guide",          tutorial_path('rightjs-extending') %>
     <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
+  </ul>
+
+  <dt>Advanced Topics</dt>
+  <ul>
+    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
+    <%= menu_link_to "RightJS Extending Guide",          tutorial_path('rightjs-extending') %>
+    <%= menu_link_to "Safe Mode and Normal Mode",        tutorial_path('safe-mode') %>
+    <%= menu_link_to "Visual Effects",                   tutorial_path('visual-effects') %>
+    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
   </ul>
 
   <dt>Ajax</dt>
@@ -40,13 +48,5 @@
     <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
     <%= menu_link_to "Uniformed Events Handling",        tutorial_path('uniformed-events-handling') %>
     <%= menu_link_to "Uniformed Options Handling",       tutorial_path('uniformed-options-handling') %>
-    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
-  </ul>
-
-  <dt>Additional Features</dt>
-  <ul>
-    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
-    <%= menu_link_to "Safe Mode and Normal Mode",        tutorial_path('safe-mode') %>
-    <%= menu_link_to "Visual Effects",                   tutorial_path('visual-effects') %>
   </ul>
 </dl>
