--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -5,22 +5,32 @@
     <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
   </ul>
 
+  <dt>Basic Features</dt>
+  <ul>
+    <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
+    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
+    <%= menu_link_to "Assignments And Chains",           tutorial_path('assignments-and-chains') %>
+    <%= menu_link_to "Uniformed Events Handling",        tutorial_path('uniformed-events-handling') %>
+    <%= menu_link_to "Uniformed Options Handling",       tutorial_path('uniformed-options-handling') %>
+    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
+  </ul>
+
   <dt>Advanced Topics</dt>
   <ul>
-    <%= menu_link_to "Delays And Timers",                tutorial_path('delays-and-timers') %>
+    <%= menu_link_to "Object Oriented Programming",      tutorial_path('object-oriented-programming') %>
+    <%= menu_link_to "Functional Programming",           tutorial_path('functional-programming') %>
     <%= menu_link_to "RightJS Extending Guide",          tutorial_path('rightjs-extending') %>
     <%= menu_link_to "Safe Mode and Normal Mode",        tutorial_path('safe-mode') %>
     <%= menu_link_to "Visual Effects",                   tutorial_path('visual-effects') %>
-    <%= menu_link_to "Work With Numbers",                tutorial_path("work-with-numbers") %>
   </ul>
 
-  <dt>Ajax</dt>
+  <dt>Ajax Features</dt>
   <ul>
     <%= menu_link_to "Ajax Basics",                      tutorial_path('ajax-handling') %>
     <%= menu_link_to "Ajax Forms",                       tutorial_path('ajax-forms') %>
   </ul>
 
-  <dt>DOM</dt>
+  <dt>DOM Topics</dt>
   <ul>
     <%= menu_link_to "DOM Navigation And Manipulations", tutorial_path('dom-navigation-and-manipulations') %>
     <%= menu_link_to "DOM Events Handling",              tutorial_path('dom-events-handling') %>
@@ -29,24 +39,10 @@
     <%= menu_link_to "Unobtrusive Programming And Events Delegation", tutorial_path('events-delegation') %>
   </ul>
 
-  <dt>Programming Paradigms</dt>
-  <ul>
-    <%= menu_link_to "Functional Programming",           tutorial_path('functional-programming') %>
-    <%= menu_link_to "Object Oriented Programming",      tutorial_path('object-oriented-programming') %>
-  </ul>
-  
   <dt>RightJS 2 Topics</dt>
   <ul>
     <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
     <%= menu_link_to "What's New in RightJS 2",          tutorial_path('what-new-in-rjs2') %>
     <%= menu_link_to "What's New in RightJS UI 2",       tutorial_path('what-new-in-rui2') %>
-  </ul>
-
-  <dt>Syntactical Sugar</dt>
-  <ul>
-    <%= menu_link_to "Assignments And Chains",           tutorial_path('assignments-and-chains') %>
-    <%= menu_link_to "Call By Name",                     tutorial_path('call-by-name') %>
-    <%= menu_link_to "Uniformed Events Handling",        tutorial_path('uniformed-events-handling') %>
-    <%= menu_link_to "Uniformed Options Handling",       tutorial_path('uniformed-options-handling') %>
   </ul>
 </dl>
