jQuery to RightJS cheatsheet

--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -10,6 +10,7 @@
   <ul>
     <%= menu_link_to "Getting Started",                  tutorial_path('getting-started') %>
     <%= menu_link_to "Top 12 Features",                  tutorial_path('top-features') %>
+    <%= menu_link_to "jQuery - RightJS Cheat Sheet",     tutorial_path('jq-rjs-cheatsheet') %>
   </ul>
 
   <dt>Basic Features</dt>
