--- a/docs/com/tutorials/_index_ru.html.erb
+++ b/docs/com/tutorials/_index_ru.html.erb
@@ -10,6 +10,7 @@
   <ul>
     <%= menu_link_to "Быстрый старт",                    tutorial_path('getting-started') %>
     <%= menu_link_to "Двенадцать лучших особенностей",   tutorial_path('top-features') %>
+    <%= menu_link_to "jQuery - RightJS шпаргалка",       tutorial_path('jq-rjs-cheatsheet') %>
   </ul>
 
   <dt>Базовые возможности</dt>
