--- a/docs/com/index/_page.html.erb
+++ b/docs/com/index/_page.html.erb
@@ -17,7 +17,7 @@
   <li id="compact">
     <%= @promo_texts[:compact][:text] %>
     <p class="bottom-link">
-      <%= link_to @promo_texts[:compact][:more], '/top-features' %>
+      <%= link_to @promo_texts[:compact][:more], '/tutorials/top-features' %>
     </p>
   </li>
   <li id="fast">
