RUI styles tutorial

--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -46,4 +46,12 @@
     <%= menu_link_to "Elements Visual State Toggling",   tutorial_path('elements-toggling') %>
     <%= menu_link_to "Unobtrusive Programming And Events Delegation", tutorial_path('events-delegation') %>
   </ul>
+
+  <dt>RightJS UI</dt>
+  <ul>
+    <%= menu_link_to "RightJS UI Styles",                tutorial_path('rui-styles')   %>
+    <%= menu_link_to "RightJS UI Events",                tutorial_path('rui-events')   %>
+    <%= menu_link_to "RightJS UI Options",               tutorial_path('rui-options')  %>
+    <%= menu_link_to "RightJS UI Advanced",              tutorial_path('rui-advanced') %>
+  </ul>
 </dl>
