--- a/docs/com/tutorials/_index_ru.html.erb
+++ b/docs/com/tutorials/_index_ru.html.erb
@@ -46,4 +46,12 @@
     <%= menu_link_to "Смена визуального состояния",      tutorial_path('elements-toggling') %>
     <%= menu_link_to "Unobtrusive программирование и делегация событий", tutorial_path('events-delegation') %>
   </ul>
+
+  <dt>RightJS UI</dt>
+  <ul>
+    <%= menu_link_to "RightJS UI стили",                 tutorial_path('rui-styles')   %>
+    <%= menu_link_to "RightJS UI события",               tutorial_path('rui-events')   %>
+    <%= menu_link_to "RightJS UI опции",                 tutorial_path('rui-options')  %>
+    <%= menu_link_to "RightJS UI продвинутые возможности", tutorial_path('rui-advanced') %>
+  </ul>
 </dl>
