What's new in RightJS 2.2 document

--- a/docs/com/tutorials/_index_en.html.erb
+++ b/docs/com/tutorials/_index_en.html.erb
@@ -1,9 +1,10 @@
 <dl id="tutorials-index">
   <dt>RightJS 2 Topics</dt>
   <ul>
-    <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
+    <%= menu_link_to "What's New in RightJS 2.2",        tutorial_path('what-new-in-rjs22') %>
     <%= menu_link_to "What's New in RightJS 2",          tutorial_path('what-new-in-rjs2') %>
     <%= menu_link_to "What's New in RightJS UI 2",       tutorial_path('what-new-in-rui2') %>
+    <%= menu_link_to "RightJS 2 Migration Guide",        tutorial_path('rjs2-migration') %>
   </ul>
 
   <dt>Beginner Topics</dt>
