--- a/docs/com/tutorials/_index_ru.html.erb
+++ b/docs/com/tutorials/_index_ru.html.erb
@@ -1,6 +1,7 @@
 <dl id="tutorials-index">
-  <dt>Статьи RightJS 2</dt>
+  <dt>Статьи о RightJS 2</dt>
   <ul>
+    <%= menu_link_to "Что нового в RightJS 2.2",         tutorial_path('what-new-in-rjs22') %>
     <%= menu_link_to "Что нового в RightJS 2",           tutorial_path('what-new-in-rjs2') %>
     <%= menu_link_to "Что нового в RightJS UI 2",        tutorial_path('what-new-in-rui2') %>
     <%= menu_link_to "RightJS 2 пособие по миграции",    tutorial_path('rjs2-migration') %>
