All in one download link

--- a/docs/com/download/_options.html.erb
+++ b/docs/com/download/_options.html.erb
@@ -14,4 +14,8 @@
     <li><%= link_to 'right.js', '/hotlink/right.js' %> - <%= "pages.download.latest_version".t %></li>
     <li><%= link_to "right-#{RIGHTJS_VERSION}.js", "/hotlink/right-#{RIGHTJS_VERSION}.js" %> - <%= "pages.download.this_version".t %></li>
   </ul>
+  <dt><%= "pages.download.AllInOne".t %></dt>
+  <ul>
+    <li><%= link_to 'rightjs-all.zip', '/builds/rightjs-all.zip' %> - <%= 'pages.download.all_in_one_desc'.t %></li>
+  </ul>
 </dl>
