--- a/docs/com/download/_options.html.erb
+++ b/docs/com/download/_options.html.erb
@@ -11,8 +11,8 @@
   </ul>
   <dt><%= "pages.download.HotLink".t %></dt>
   <ul>
-    <li><%= link_to 'right.js', '/hotlink/right.js' %> - <%= "pages.download.latest_version".t %></li>
-    <li><%= link_to "right-#{RIGHTJS_VERSION}.js", "/hotlink/right-#{RIGHTJS_VERSION}.js" %> - <%= "pages.download.this_version".t %></li>
+    <li><%= link_to 'right.js', 'http://cdn.rightjs.org/right.js' %> - <%= "pages.download.latest_version".t %></li>
+    <li><%= link_to "right-#{RIGHTJS_VERSION}.js", "http://cdn.rightjs.org/right-#{RIGHTJS_VERSION}.js" %> - <%= "pages.download.this_version".t %></li>
   </ul>
   <dt><%= "pages.download.AllInOne".t %></dt>
   <ul>
